--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 body{
     background-color: rgb(255, 255, 255);
 }
-header{background-color: black;}
+header{background-color: rgb(255, 255, 255, 0);}
